not Torino, Turin

--- a/resume.tex
+++ b/resume.tex
@@ -88,7 +88,7 @@
 
 Department of Applied Science and Technology& Phone: +39 (011) 090-4758\\
 Politecnico di Torino & Cell: +39 324 691 5870\\
-Corso Duca degli Abruzzi 24, 10129 Torino, Italy & Email: mohsen.karimi@polito.it \\ 
+Corso Duca degli Abruzzi 24, 10129 Turin, Italy & Email: mohsen.karimi@polito.it \\ 
   \\
 \end{tabular*}
 \end{tabbing}
