--- a/resume.tex
+++ b/resume.tex
@@ -267,8 +267,11 @@ A. Ghaffari, \underline{M. Karimi}, \quotes{Numerical Investigation on Multiphas
 \underline{M. Karimi}, P. Ferkl, D. L. Marchisio, J. Kosek, H. Droghetti, \quotes{Coupling of a macro-scale CFD model with a bubble-scale model for simulation of polyurethane foams}, to be presented at the \textit{22$^{nd}$ International Congress of Chemical and Process Engineering, CHISA}, Prague, Czech Republic, August 28-31, 2016.	
 	\item 
 \underline{M. Karimi}, D. L. Marchisio, \quotes{Coupling Population Balance Equation (PBE) with Computational Fluid Dynamics (CFD) for Multiphase Modelling of Expanding Polyurethane Foams,} to be presented at the \textit{9$^{th}$ International Conference on Multiphase Flow}, Firenze, Italy, May 22-27, 2016.
+	\item 
+\underline{M. Karimi}, D. L. Marchisio, \quotes{Coupling Population Balance Equation (PBE) with Computational Fluid Dynamics (CFD) for Multiphase Modelling of Expanding Polyurethane Foams,} to be presented at the \textit{9$^{th}$ International Conference on Multiphase Flow}, Firenze, Italy, May 22-27, 2016.
+
 	\item
-\underline{M. Karimi}, D. L. Marchisio, \quotes{Simulation of bubble growth and coalescence in reacting polymer foams}, \textit{In: Proceedings of 68$^{th}$ Annual Meeting of the APS Division of Fluid Dynamics}, Boston, MA, USA, November 22-24, 2015.
+P. Ferkl, \underline{M. Karimi}, D. L. Marchisio, J. Kosek, \quotes{Introducing a Multiscale modelling tool for the Simulation of Polyurethane Foams}, to be presented at the \textit{9$^{th}$ International Conference on Multiphase Flow}, Firenze, Italy, May 22-27, 2016.
 \item
 \underline{M. Karimi}, D. L. Marchisio, \quotes{Validation of a Macro-Scale CFD-PBE Model for the Polyurethane Foaming Process}, \textit{In: Proceeding of the AIChE 2015 Annual Meeting}, Salt Lake City, UT, USA, November 8-13, 2015.
 	\item 
@@ -379,6 +382,7 @@ A. Ghaffari, \underline{M. Karimi}, \quotes{Numerical Investigation on Multiphas
 \begin{list}{}{}
 \item - Guven Akdogan (gakdogan@sun.ac.za), Associate Professor, Department of Process Engineering, Stellenbosch University, Stellenbosch, South Africa.
 \item - Daniele L. Marchisio (daniele.marchisio@polito.it), Associate Professor, Department of Applied Science and Technology, Politecnico di Torino, Turin, Italy.
+\item - Steven M. Bradshaw (smb@sun.ac.za), Professor, Department of Process Engineering, Stellenbosch University, Stellenbosch, South Africa.
 \item - Ali Dehghani, (a.dehghani@yazduni.ac.ir), Associate Professor, Faculty of Mining and Metallurgical Engineering, Yazd University, Yazd, Iran.
 \end{list}
 
