add checmical engineering science paper

--- a/resume.tex
+++ b/resume.tex
@@ -176,7 +176,13 @@ xxxx\=xxxxxxxx\=xxxxxxxx\=xxxxxxxx\=\kill
  \item \hspace{16pt}  - Formulating a novel approach based on population balance equation for the simulation of polyurethane foams.
  \item \hspace{16pt}  - Developing and validating a zero-dimensional framework for simulation of reacting expanding polyurethane foams, \href{https://github.com/MoDeNa-EUProject/MoDeNa}{(source code)}.
  \item \hspace{16pt}  - Introducing a new solver, \quotes{\texttt{PUFoam}}, in OpenFOAM CFD code, based on coupling of PBE with CFD.
- \item \hspace{16pt}  - Providing guidance and mentorship to post graduate students in \quotes{multiscale modelling for materials science and process engineering research group}.
+ \item \hspace{16pt}  - Providing guidance and mentorship to post graduate students in \quotes{multiscale modelling for materials science and process engineering research group}:	
+ 			\begin{list}{}{}
+ 			\item \hspace{32pt} - Hermes Droghetti; \quotes{\textit{aaaa}}
+ 			\item \hspace{32pt} - Marco Cravero; \quotes{\textit{bbb}}
+ 			\item \hspace{32pt} - Alessandro Concas; \quotes{\textit{Modeling of polyurethane foams with commercial fluid dynamic computational code FLUENT}}.
+ 			\item \hspace{32pt} - Osvaldo Dipaolo; \quotes{\textit{ddd}}
+ 			\end{list}
 \end{list}
 
 \begin{tabbing}
@@ -230,6 +236,9 @@ xxxx\=xxxxxxxx\=xxxxxxxx\=xxxxxxxx\=\kill
 \subsubsection*{REFEREED JOURNAL PAPERS}
 
 \begin{enumerate}
+	\item
+P. Ferkl, \underline{M. Karimi}, D. L. Marchisio, J. Kosek, \quotes{Multi-scale modelling of expanding polyurethane foams: coupling macro- and bubble-scales,} submitted to \textit{Chemical Engineering Science}, January 2016.
+	
     \item
 \underline{M. Karimi}, H. Droghetti, D. L. Marchisio, \quotes{Multiscale Modelling of Expanding Polyurethane Foams via Computational Fluid Dynamics and Population Balance Equation,} accepted by \textit{Macromolecular Symposia}, November 2015.
 
