add hermes, marco and alessandro thesis titles

--- a/resume.tex
+++ b/resume.tex
@@ -178,11 +178,11 @@ xxxx\=xxxxxxxx\=xxxxxxxx\=xxxxxxxx\=\kill
  \item \hspace{16pt}  - Introducing a new solver, \quotes{\texttt{PUFoam}}, in OpenFOAM CFD code, based on coupling of PBE with CFD.
  \item \hspace{16pt}  - Providing guidance and mentorship to post graduate students in \quotes{multiscale modelling for materials science and process engineering research group}:	
  			\begin{list}{}{}
- 			\item \hspace{32pt} - Hermes Droghetti; \quotes{\textit{aaaa}}
- 			\item \hspace{32pt} - Marco Cravero; \quotes{\textit{bbb}}
+ 			\item \hspace{32pt} - Hermes Droghetti; \quotes{\textit{Development of an OpenFOAM solver for polyurethane foams}}.
+ 			\item \hspace{32pt} - Marco Cravero; \quotes{\textit{Testing and validation of a computational fluid dynamics model for polyurethane foams}}.
  			\item \hspace{32pt} - Alessandro Concas; \quotes{\textit{Modeling of polyurethane foams with commercial fluid dynamic computational code FLUENT}}.
- 			\item \hspace{32pt} - Osvaldo Dipaolo; \quotes{\textit{ddd}}
- 			\end{list}
+% 1			\item \hspace{32pt} - Osvaldo Dipaolo; \quotes{\textit{ddd}}
+		\end{list}
 \end{list}
 
 \begin{tabbing}
@@ -210,7 +210,7 @@ xxxx\=xxxxxxxx\=xxxxxxxx\=xxxxxxxx\=\kill
 \vspace{-0.4cm}
 
 \begin{list}{}{}
-\item Worked with Professor Dehghani and Professor. Talebi on experimental, analytical and computational modelling of hydrocyclones.   
+\item Worked with Professor Dehghani and Professor Talebi on experimental, analytical and computational modelling of hydrocyclones.   
 \end{list}
 
 %\newpage
@@ -274,19 +274,22 @@ A. Ghaffari, \underline{M. Karimi}, \quotes{Numerical Investigation on Multiphas
 
 	\item 
 \underline{M. Karimi}, P. Ferkl, D. L. Marchisio, J. Kosek, H. Droghetti, \quotes{Coupling of a macro-scale CFD model with a bubble-scale model for simulation of polyurethane foams}, to be presented at the \textit{22$^{nd}$ International Congress of Chemical and Process Engineering, CHISA}, Prague, Czech Republic, August 28-31, 2016.	
-	\item 
-\underline{M. Karimi}, D. L. Marchisio, \quotes{Coupling Population Balance Equation (PBE) with Computational Fluid Dynamics (CFD) for Multiphase Modelling of Expanding Polyurethane Foams,} to be presented at the \textit{9$^{th}$ International Conference on Multiphase Flow}, Firenze, Italy, May 22-27, 2016.
+
 	\item 
 \underline{M. Karimi}, D. L. Marchisio, \quotes{Coupling Population Balance Equation (PBE) with Computational Fluid Dynamics (CFD) for Multiphase Modelling of Expanding Polyurethane Foams,} to be presented at the \textit{9$^{th}$ International Conference on Multiphase Flow}, Firenze, Italy, May 22-27, 2016.
 
 	\item
 P. Ferkl, \underline{M. Karimi}, D. L. Marchisio, J. Kosek, \quotes{Introducing a Multiscale modelling tool for the Simulation of Polyurethane Foams}, to be presented at the \textit{9$^{th}$ International Conference on Multiphase Flow}, Firenze, Italy, May 22-27, 2016.
-\item
+
+	\item
 \underline{M. Karimi}, D. L. Marchisio, \quotes{Validation of a Macro-Scale CFD-PBE Model for the Polyurethane Foaming Process}, \textit{In: Proceeding of the AIChE 2015 Annual Meeting}, Salt Lake City, UT, USA, November 8-13, 2015.
+	
 	\item 
 \underline{M. Karimi}, G. Akdogan, S. M. Bradshaw, \quotes{A CFD Model for the Flotation Rate Constant}, \textit{In: Proceedings of the $37^{th}$ International Symposium Application of Computers and Operations Research in the Mineral Industry (APCOM)}, pp. 445-456, May 23-27, 2015.	
+	
 	\item 
 \underline{M. Karimi}, D. L. Marchisio, \quotes{Multi-scale Modelling of a Reacting-Expanding Polyurethane Foam}, \textit{10th European Congress of Chemical Engineering}, Nice, France, September 27 to October 1, 2015.	
+
 	\item
 \underline{M. Karimi}, D. L. Marchisio, \quotes{Multiscale Modelling of Expanding Polyurethane Foams via Computational Fluid Dynamics and Population Balance Model}, \textit{In: Proceedings of Polymer Reaction Engineering IX (PRE9),} Cancun, Mexico, May 10-15, 2015.
 
