--- a/resume.tex
+++ b/resume.tex
@@ -237,7 +237,7 @@ xxxx\=xxxxxxxx\=xxxxxxxx\=xxxxxxxx\=\kill
 
 \begin{enumerate}
 	\item
-P. Ferkl, \underline{M. Karimi}, D. L. Marchisio, J. Kosek, \quotes{Multi-scale modelling of expanding polyurethane foams: coupling macro- and bubble-scales}, submitted to \textit{Chemical Engineering Science}, January 2016.
+P. Ferkl, \underline{M. Karimi}, D. L. Marchisio, J. Kosek, \quotes{Multi-scale modelling of expanding polyurethane foams: coupling macro- and bubble-scales}, accepted by \textit{Chemical Engineering Science}, March 2016.
 	
     \item
 \underline{M. Karimi}, H. Droghetti, D. L. Marchisio, \quotes{Multiscale Modelling of Expanding Polyurethane Foams via Computational Fluid Dynamics and Population Balance Equation},  \textit{Macromolecular Symposia}, Vol. 360(1), pp. 108--122, 2016.
