add openFoam training in professional development

--- a/resume.tex
+++ b/resume.tex
@@ -324,6 +324,7 @@ P. Ferkl, \underline{M. Karimi}, D. L. Marchisio, J. Kosek, \quotes{Introducing 
 \vspace{0.2cm}
 \begin{list}{}{}
 
+	\item - OpenFOAM: Programming CFD, Training workshop, CFD Direct Limited, April 2016.
 	\item - \textit{MoDeNa} technical workshop on the quantum, molecular and meso-scale modelling, University of Stuttgart, Stuttgart, Germany, Feb 2015.	
 
 	\item - \textit{MoDeNa} technical workshop on the production of polyurethane foams, Lemf\"{o}rde, Germany, Feb 2014.
