--- a/resume.tex
+++ b/resume.tex
@@ -276,13 +276,13 @@ A. Ghaffari, \underline{M. Karimi}, \quotes{Numerical Investigation on Multiphas
 \underline{M. Karimi}, P. Ferkl, D. L. Marchisio, J. Kosek, H. Droghetti, \quotes{Coupling of a macro-scale CFD model with a bubble-scale model for simulation of polyurethane foams}, to be presented at the \textit{22$^{nd}$ International Congress of Chemical and Process Engineering, CHISA}, Prague, Czech Republic, August 28-31, 2016.	
 
 	\item 
-\underline{M. Karimi}, D. L. Marchisio, \quotes{Coupling Population Balance Equation (PBE) with Computational Fluid Dynamics (CFD) for Multiphase Modelling of Expanding Polyurethane Foams}, to be presented at the \textit{9$^{th}$ International Conference on Multiphase Flow}, Firenze, Italy, May 22-27, 2016.
+\underline{M. Karimi}, D. L. Marchisio, \quotes{Coupling Population Balance Equation (PBE) with Computational Fluid Dynamics (CFD) for Multiphase Modelling of Expanding Polyurethane Foams}, \textit{In: Proceedings of the 9$^{th}$ International Conference on Multiphase Flow}, Firenze, Italy, May 22-27, 2016.
 
 	\item
-P. Ferkl, \underline{M. Karimi}, D. L. Marchisio, J. Kosek, \quotes{Introducing a Multiscale modelling tool for the Simulation of Polyurethane Foams}, to be presented at the \textit{9$^{th}$ International Conference on Multiphase Flow}, Firenze, Italy, May 22-27, 2016.
+P. Ferkl, \underline{M. Karimi}, D. L. Marchisio, J. Kosek, \quotes{Introducing a Multiscale modelling tool for the Simulation of Polyurethane Foams}, \textit{In: Proceedings of the 9$^{th}$ International Conference on Multiphase Flow}, Firenze, Italy, May 22-27, 2016.
 
 	\item
-\underline{M. Karimi}, D. L. Marchisio, \quotes{Validation of a Macro-Scale CFD-PBE Model for the Polyurethane Foaming Process}, \textit{In: Proceeding of the AIChE 2015 Annual Meeting}, Salt Lake City, UT, USA, November 8-13, 2015.
+\underline{M. Karimi}, D. L. Marchisio, \quotes{Validation of a Macro-Scale CFD-PBE Model for the Polyurethane Foaming Process}, \textit{In: Proceedings of the AIChE 2015 Annual Meeting}, Salt Lake City, UT, USA, November 8-13, 2015.
 	
 	\item 
 \underline{M. Karimi}, G. Akdogan, S. M. Bradshaw, \quotes{A CFD Model for the Flotation Rate Constant}, \textit{In: Proceedings of the $37^{th}$ International Symposium Application of Computers and Operations Research in the Mineral Industry (APCOM)}, pp. 445-456, May 23-27, 2015.	
