add the PUFoam solver paper for CPC jounral

--- a/CV.tex
+++ b/CV.tex
@@ -236,6 +236,8 @@ xxxx\=xxxxxxxx\=xxxxxxxx\=xxxxxxxx\=\kill
 \subsubsection*{REFEREED JOURNAL PAPERS}
 
 \begin{enumerate}
+	\item 
+\underline{M. Karimi}, H. Droghetti, D. L. Marchisio, \quotes{PUFoam: a novel open-source CFD solver for the simulation of expanding and reacting polyurethane foams}, submitted to \textit{Computer Physics Communications}, July 2016.
 	\item
 P. Ferkl, \underline{M. Karimi}, D. L. Marchisio, J. Kosek, \quotes{Multi-scale modelling of expanding polyurethane foams: coupling macro- and bubble-scales}, \textit{Chemical Engineering Science}, Vol. 148, pp. 55--64, 2016.
 	
