add summary to the CV

--- a/CV.tex
+++ b/CV.tex
@@ -102,6 +102,15 @@ Corso Duca degli Abruzzi 24, 10129 Turin, Italy & Email: mohsen.karimi@polito.it
 \rfoot{\textcolor{gray}{Page \thepage}}
 \fancyfoot[C]{}
 
+\subsubsection*{SUMMARY STATEMENT}
+%{\color{DarkSeaGreen}} \hrule
+\hrule
+\vspace{0.2cm}
+\begin{list}{}{}
+\item Researcher in Computational Fluid Dynamics with a passion for programming and multiphase systems. Over eight years of experience developing and applying CFD models for a range of problems in chemical engineering and mineral processing fields. 
+\end{list}
+\vspace{0.1cm}
+
 \subsection*{EDUCATION AND RESEARCH EXPERIENCE}
 
 %{\color{DarkSeaGreen}} \hrule
