add CISM workshop

--- a/CV.tex
+++ b/CV.tex
@@ -335,6 +335,7 @@ P. Ferkl, \underline{M. Karimi}, D. L. Marchisio, J. Kosek, \quotes{Introducing 
 \vspace{0.2cm}
 \begin{list}{}{}
 
+	\item - Advanced workshop on multi-scale modelling of flowing soft matter and polymer systems, International Center for Mechanical Science (CISM), Udine, Italy, July 2016.
 	\item - OpenFOAM: Programming CFD, Training workshop, CFD Direct Limited, April 2016.
 	\item - \textit{MoDeNa} technical workshop on the quantum, molecular and meso-scale modelling, University of Stuttgart, Stuttgart, Germany, Feb 2015.	
 
