fix the date mistake

--- a/CV.tex
+++ b/CV.tex
@@ -102,7 +102,7 @@ Corso Duca degli Abruzzi 24, 10129 Turin, Italy & Email: mohsen.karimi@polito.it
 \rfoot{\textcolor{gray}{Page \thepage}}
 \fancyfoot[C]{}
 
-\subsubsection*{SUMMARY STATEMENT}
+\subsection*{SUMMARY STATEMENT}
 %{\color{DarkSeaGreen}} \hrule
 \hrule
 \vspace{0.2cm}
@@ -153,7 +153,7 @@ Advisors: Ali Dehghani, Shahram Talebi \\
 Faculty of Mining Engineering, \\
 Kashan University & Kashan, Iran \\
 B. Sc.in Mining Engineering &
-{\it June 2000}\\
+{\it June 2006}\\
  & \\
 
 \end{tabular*}
