--- a/CV.tex
+++ b/CV.tex
@@ -189,7 +189,7 @@ xxxx\=xxxxxxxx\=xxxxxxxx\=xxxxxxxx\=\kill
  			\begin{list}{}{}
  			\item \hspace{32pt} - Hermes Droghetti; \quotes{\textit{Development of an OpenFOAM solver for polyurethane foams}}.
  			\item \hspace{32pt} - Marco Cravero; \quotes{\textit{Testing and validation of a computational fluid dynamics model for polyurethane foams}}.
- 			\item \hspace{32pt} - Alessandro Concas; \quotes{\textit{Modeling of polyurethane foams with commercial fluid dynamic computational code FLUENT}}.
+ 			\item \hspace{32pt} - Alessandro Concas; \quotes{\textit{Modeling of polyurethane foams with commercial CFD code FLUENT}}.
 % 1			\item \hspace{32pt} - Osvaldo Dipaolo; \quotes{\textit{ddd}}
 		\end{list}
 \end{list}
