--- a/CV.tex
+++ b/CV.tex
@@ -107,7 +107,7 @@ Corso Duca degli Abruzzi 24, 10129 Turin, Italy & Email: mohsen.karimi@polito.it
 \hrule
 \vspace{0.2cm}
 \begin{list}{}{}
-\item Researcher in Computational Fluid Dynamics with a passion for programming and multiphase systems. Over eight years of experience developing and applying CFD models for a range of problems in chemical engineering and mineral processing fields. 
+\item Researcher in Computational Fluid Dynamics with a passion for multiphase systems and programming. Over eight years of experience developing and applying CFD models for a range of problems in chemical engineering and mineral processing fields.
 \end{list}
 \vspace{0.1cm}
 
@@ -181,15 +181,15 @@ xxxx\=xxxxxxxx\=xxxxxxxx\=xxxxxxxx\=\kill
 \vspace{-0.4cm}
 
 \begin{list}{}{}
-\item Working with Professor Marchisio on \quotes{Modelling of Morphology Development of Micro and Nano Structures \href{http://www.modenaproject.eu/}{(MoDeNa)}} project aiming to develop, demonstrate and evaluate a CFD-PBE model for polyurethane foams. 
+\item Working with Professor Marchisio on \quotes{Modelling of Morphology Development of Micro and Nano Structures \href{http://www.modenaproject.eu/}{(MoDeNa)}} project aiming to develop, demonstrate and evaluate a modelling platform for polyurethane foams. 
  \item \hspace{16pt}  - Formulating a novel approach based on population balance equation for the simulation of polyurethane foams.
- \item \hspace{16pt}  - Developing and validating a zero-dimensional framework for simulation of reacting expanding polyurethane foams, \href{https://github.com/MoDeNa-EUProject/MoDeNa}{(source code)}.
+ \item \hspace{16pt}  - Developing and validating a model prototype for simulation of reacting expanding polyurethane foams, \href{https://github.com/MoDeNa-EUProject/MoDeNa}{(source code)}.
  \item \hspace{16pt}  - Introducing a new solver, \quotes{\texttt{PUFoam}}, in OpenFOAM CFD code, based on coupling of PBE with CFD.
  \item \hspace{16pt}  - Providing guidance and mentorship to post graduate students in \quotes{multiscale modelling for materials science and process engineering research group}:	
  			\begin{list}{}{}
  			\item \hspace{32pt} - Hermes Droghetti; \quotes{\textit{Development of an OpenFOAM solver for polyurethane foams}}.
  			\item \hspace{32pt} - Marco Cravero; \quotes{\textit{Testing and validation of a computational fluid dynamics model for polyurethane foams}}.
- 			\item \hspace{32pt} - Alessandro Concas; \quotes{\textit{Modeling of polyurethane foams with commercial CFD code FLUENT}}.
+ 			\item \hspace{32pt} - Alessandro Concas; \quotes{\textit{Modelling of polyurethane foams with commercial CFD code FLUENT}}.
 % 1			\item \hspace{32pt} - Osvaldo Dipaolo; \quotes{\textit{ddd}}
 		\end{list}
 \end{list}
@@ -219,7 +219,7 @@ xxxx\=xxxxxxxx\=xxxxxxxx\=xxxxxxxx\=\kill
 \vspace{-0.4cm}
 
 \begin{list}{}{}
-\item Worked with Professor Dehghani and Professor Talebi on experimental, analytical and computational modelling of hydrocyclones.   
+\item Worked with Professor Dehghani and Professor Talebi on experimental, analytical and computational modelling of hydrocyclones.
 \end{list}
 
 %\newpage
@@ -230,10 +230,6 @@ xxxx\=xxxxxxxx\=xxxxxxxx\=xxxxxxxx\=\kill
 \fancyfoot[C]{}
 
 %\newpage
-%\pagestyle{fancy}
-%\lhead{\textcolor{gray}{\it Francesca Boso}}
-%%\rhead{\textcolor{gray}{\thepage/\totalpages{}}}
-%\fancyfoot[C]{}
 
 % List of papers and publications and patents ?
 %===========================================
@@ -305,10 +301,6 @@ P. Ferkl, \underline{M. Karimi}, D. L. Marchisio, J. Kosek, \quotes{Introducing 
 \underline{M. Karimi}, D. L. Marchisio, \quotes{Multiscale Modelling of Expanding Polyurethane Foams via Computational Fluid Dynamics and Population Balance Model}, \textit{In: Proceedings of Polymer Reaction Engineering IX (PRE9),} Cancun, Mexico, May 10-15, 2015.
 
 %\newpage
-%\pagestyle{fancy}
-%\lhead{\textcolor{gray}{\it Mohsen Karimi}}
-%\rhead{\textcolor{gray}{\thepage/\totalpages{}}}
-%\fancyfoot[C]{}
 
 	\item
 \underline{M. Karimi}, G. Akdogan, K. Dellimore, S. M. Bradshaw, \quotes{Comparison of Different Drag Coefficients in CFD Modelling of a Laboratory Scale Rushton-Turbine Flotation Tank}, \textit{In: Proceedings of the Ninth International Conference on CFD in the Minerals and Process Industries}, CSIRO, Melbourne, Australia, December 10-12, 2012.
@@ -368,9 +360,9 @@ P. Ferkl, \underline{M. Karimi}, D. L. Marchisio, J. Kosek, \quotes{Introducing 
 \hrule
 \vspace{0.2cm}
 \begin{list}{}{}
-	\item \textbf{Pre-processing:} Proficient in Design Modeller and GAMBIT.
+	\item \textbf{Pre-processing:} Proficient in Design Modeller and GAMBIT, familiar with SALOME.
 	\item \textbf{CFD codes:} Proficient in OpenFOAM and Fluent.
-	\item \textbf{Post-processing:} Proficient in CFD-Post and paraView, familiar with Tecplot 360.	
+	\item \textbf{Post-processing:} Proficient in CFD-Post and ParaView.	
 	\item \textbf{Programming:} Proficient in C++, experienced with Python and MATLAB.
     \item \textbf{Design of Experiments:} Proficient in Design Expert, MiniTab, Qualitek.
     \item \textbf{Mineral processing tools:} Experienced with MODSIM, familiar with JKSimMet.
@@ -416,8 +408,6 @@ P. Ferkl, \underline{M. Karimi}, D. L. Marchisio, J. Kosek, \quotes{Introducing 
 \rfoot{\textcolor{gray}{Page \thepage}}
 \fancyfoot[C]{}
 \end{document}
-
-
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
