--- a/CV.tex
+++ b/CV.tex
@@ -28,7 +28,7 @@
 \usepackage{origpagecounting}
 \usepackage[dvips]{color}
 \usepackage{fixltx2e}
-
+\usepackage{url}
 \usepackage{xcolor}
 
 \newcounter{myEnumCounter}
@@ -86,9 +86,9 @@
 \=xxxxxxxx\=xxxxxxxx\=xxxxxxxx\=\kill
 \begin{tabular*}{\linewidth}{l@{\extracolsep{\fill}}r}
 
-Department of Applied Science and Technology& Phone: +39 (011) 090-4758\\
-Politecnico di Torino & Cell: +39 324 691 5870\\
-Corso Duca degli Abruzzi 24, 10129 Turin, Italy & Email: mohsen.karimi@polito.it \\ 
+Department of Chemistry and Chemical Engineering& \\
+Chalmers University of Technology& Cell: +46 070 540 1274\\
+412 96, Gothenburg, Sweden & Email: mohsen.k@chalmers.se \\ 
   \\
 \end{tabular*}
 \end{tabbing}
@@ -107,11 +107,11 @@ Corso Duca degli Abruzzi 24, 10129 Turin, Italy & Email: mohsen.karimi@polito.it
 \hrule
 \vspace{0.2cm}
 \begin{list}{}{}
-\item Researcher in Computational Fluid Dynamics with a passion for multiphase systems and programming. Over eight years of experience developing and applying CFD models for a range of problems in chemical engineering and mineral processing fields.
+\item Researcher in Computational Fluid Dynamics with a passion for turbulent multiphase systems and programming. Over eight years of experience developing and applying CFD models for a wide range of problems in chemical and process engineering fields.
 \end{list}
 \vspace{0.1cm}
 
-\subsection*{EDUCATION AND RESEARCH EXPERIENCE}
+%\subsection*{EDUCATION AND RESEARCH EXPERIENCE}
 
 %{\color{DarkSeaGreen}} \hrule
 \hrule
@@ -127,11 +127,11 @@ xxxx\=xxxxxxxx\=xxxxxxxx\=xxxxxxxx\=\kill
 
 \>\begin{tabular*}{0.97\linewidth}{l@{\extracolsep{\fill}}r}
 
-Department of Applied Science and Technology, \\
-Politecnico di Torino & Turin, Italy\\
-Post-doctoral Research Fellow &
-{\textit{February 2014 - Present}}\\
-Supervisor: Daniele L. Marchisio \\ \\ 
+%Department of Applied Science and Technology, \\
+%Politecnico di Torino & Turin, Italy\\
+%Post-doctoral Research Fellow &
+%{\textit{February 2014 - Present}}\\
+%Supervisor: Daniele L. Marchisio \\ \\ 
 
 Process Engineering Department, \\
 University of Stellenbosch & Stellenbosch, South Africa\\
@@ -159,39 +159,30 @@ B. Sc.in Mining Engineering &
 \end{tabular*}
 \end{tabbing}
 
+%
+%\subsubsection*{RESEARCH INTERESTS}
+%%\hrule
+%%\vspace{0.2cm}
+%
+%\begin{list}{}{}
+%\item Application of CFD for different engineering fields; formulations and developments of CFD solvers for single and multiphase systems; fundamental studies towards establishing new modelling methodologies for a range of engineering problems encountering in the chemical, mechanical, process and mining engineering; 
+%\end{list}
 
-\subsubsection*{RESEARCH INTERESTS}
-%\hrule
-%\vspace{0.2cm}
-
-\begin{list}{}{}
-\item Application of CFD for different engineering fields; formulations and developments of CFD solvers for single and multiphase systems; fundamental studies towards establishing new modelling methodologies for a range of engineering problems encountering in the chemical, mechanical, process and mining engineering; 
-\end{list}
-
-\subsubsection*{RESEARCH EXPERIENCE}
+\subsubsection*{PROFESSIONAL EXPERIENCE}
 %
 \begin{tabbing}
 xxxx\=xxxxxxxx\=xxxxxxxx\=xxxxxxxx\=\kill
 
 \>\begin{tabular*}{0.97\linewidth}{l@{\extracolsep{\fill}}r}
 %\vspace{0.2cm}
-\textbf{Postdoctoral Fellowship} & \textbf{2014 - Present} 
+\textbf{Postdoctoral Researcher} & \textbf{2017 - Present} \\
+\textit{Department of Chemistry and Chemical Engineering}& \\
+\textit{Chalmers University of Technology}&
 \end{tabular*}
 \end{tabbing}
-\vspace{-0.4cm}
-
+\vspace{-0.18cm}
 \begin{list}{}{}
-\item Working with Professor Marchisio on \quotes{Modelling of Morphology Development of Micro and Nano Structures \href{http://www.modenaproject.eu/}{(MoDeNa)}} project aiming to develop, demonstrate and evaluate a modelling platform for polyurethane foams. 
- \item \hspace{16pt}  - Formulating a novel approach based on population balance equation for the simulation of polyurethane foams.
- \item \hspace{16pt}  - Developing and validating a model prototype for simulation of reacting expanding polyurethane foams, \href{https://github.com/MoDeNa-EUProject/MoDeNa}{(source code)}.
- \item \hspace{16pt}  - Introducing a new solver, \quotes{\texttt{PUFoam}}, in OpenFOAM CFD code, based on coupling of PBE with CFD.
- \item \hspace{16pt}  - Providing guidance and mentorship to post graduate students in \quotes{multiscale modelling for materials science and process engineering research group}:	
- 			\begin{list}{}{}
- 			\item \hspace{32pt} - Hermes Droghetti; \quotes{\textit{Development of an OpenFOAM solver for polyurethane foams}}.
- 			\item \hspace{32pt} - Marco Cravero; \quotes{\textit{Testing and validation of a computational fluid dynamics model for polyurethane foams}}.
- 			\item \hspace{32pt} - Alessandro Concas; \quotes{\textit{Modelling of polyurethane foams with commercial CFD code FLUENT}}.
-% 1			\item \hspace{32pt} - Osvaldo Dipaolo; \quotes{\textit{ddd}}
-		\end{list}
+\item Working with \href{https://www.chalmers.se/en/staff/Pages/ronnie-andersson.aspx}{Professor Andersson} on developing models for dispersed multiphase flows. The project aims to improve the understanding of droplets and gas bubbles breakup in turbulent flows by developing new kernels for population balance modeling. 
 \end{list}
 
 \begin{tabbing}
@@ -199,28 +190,54 @@ xxxx\=xxxxxxxx\=xxxxxxxx\=xxxxxxxx\=\kill
 
 \>\begin{tabular*}{0.97\linewidth}{l@{\extracolsep{\fill}}r}
 %\vspace{0.2cm}
-\textbf{Doctoral Research} & \textbf{2010 - 2014} 
+\textbf{Postdoctoral Researcher} & \textbf{2014 - 2017} \\
+\textit{Department of Applied Science and Technology}& \\
+\textit{Polytechnic University of Turin}&
 \end{tabular*}
 \end{tabbing}
-\vspace{-0.4cm}
+\vspace{-0.18cm}
 
 \begin{list}{}{}
-\item Worked with Professor Akdogan and Professor Bradshaw on the development of a CFD model for conventional flotation vessels. A CFD-based methodology was formulated, and validated for the prediction of flotation macro response by integrating the significance of the hydrodynamic flow features into the flotation micro-processes.
+\item Worked with \href{http://bit.ly/2CYF9sp}{Professor Marchisio} on \quotes{Modelling of Morphology Development of Micro and Nano Structures, \href{https://github.com/karimimp/MoDeNa}{(MoDeNa)}} project. Developed a new solver, \href{http://www.sciencedirect.com/science/article/pii/S0010465517300978}{\texttt{PUFoam}}, in OpenFOAM based on coupling of PBE with CFD.
+% \item \hspace{16pt}  - Formulating a novel approach based on population balance equation for the simulation of polyurethane foams.
+% \item \hspace{16pt}  - Developing and validating a model prototype for simulation of reacting expanding polyurethane foams, \href{https://github.com/MoDeNa-EUProject/MoDeNa}{(source code)}.
+% \item \hspace{16pt}  - Introducing a new solver, \quotes{\texttt{PUFoam}}, in OpenFOAM CFD code, based on coupling of PBE with CFD.
+% \item \hspace{16pt}  - Providing guidance and mentorship to post graduate students in \quotes{multiscale modelling for materials science and process engineering research group}:	
+% 			\begin{list}{}{}
+% 			\item \hspace{32pt} - Hermes Droghetti; \quotes{\textit{Development of an OpenFOAM solver for polyurethane foams}}.
+% 			\item \hspace{32pt} - Marco Cravero; \quotes{\textit{Testing and validation of a computational fluid dynamics model for polyurethane foams}}.
+% 			\item \hspace{32pt} - Alessandro Concas; \quotes{\textit{Modelling of polyurethane foams with commercial CFD code FLUENT}}.
+%% 1			\item \hspace{32pt} - Osvaldo Dipaolo; \quotes{\textit{ddd}}
+%		\end{list}
 \end{list}
 
-\begin{tabbing}
-xxxx\=xxxxxxxx\=xxxxxxxx\=xxxxxxxx\=\kill
-
-\>\begin{tabular*}{0.97\linewidth}{l@{\extracolsep{\fill}}r}
-%\vspace{0.2cm}
-\textbf{Master's Research} & \textbf{2007 - 2009} 
-\end{tabular*}
-\end{tabbing}
-\vspace{-0.4cm}
-
-\begin{list}{}{}
-\item Worked with Professor Dehghani and Professor Talebi on experimental, analytical and computational modelling of hydrocyclones.
-\end{list}
+%\begin{tabbing}
+%xxxx\=xxxxxxxx\=xxxxxxxx\=xxxxxxxx\=\kill
+%
+%\>\begin{tabular*}{0.97\linewidth}{l@{\extracolsep{\fill}}r}
+%%\vspace{0.2cm}
+%\textbf{Doctoral Research} & \textbf{2010 - 2014} 
+%\end{tabular*}
+%\end{tabbing}
+%\vspace{-0.4cm}
+%
+%\begin{list}{}{}
+%\item Worked with Professor Akdogan and Professor Bradshaw on the development of a CFD model for conventional flotation vessels. A CFD-based methodology was formulated, and validated for the prediction of flotation macro response by integrating the significance of the hydrodynamic flow features into the flotation micro-processes.
+%\end{list}
+%
+%\begin{tabbing}
+%xxxx\=xxxxxxxx\=xxxxxxxx\=xxxxxxxx\=\kill
+%
+%\>\begin{tabular*}{0.97\linewidth}{l@{\extracolsep{\fill}}r}
+%%\vspace{0.2cm}
+%\textbf{Master's Research} & \textbf{2007 - 2009} 
+%\end{tabular*}
+%\end{tabbing}
+%\vspace{-0.4cm}
+%
+%\begin{list}{}{}
+%\item Worked with Professor Dehghani and Professor Talebi on experimental, analytical and computational modelling of hydrocyclones.
+%\end{list}
 
 %\newpage
 \thispagestyle{fancy}
@@ -235,14 +252,18 @@ xxxx\=xxxxxxxx\=xxxxxxxx\=xxxxxxxx\=\kill
 %===========================================
 %\vspace{0.1cm}
 \subsection*{PUBLICATIONS}
-\hrule
+%\hrule
 \vspace{0.2cm}
 
 \subsubsection*{REFEREED JOURNAL PAPERS}
 
 \begin{enumerate}
 	\item 
-\underline{M. Karimi}, H. Droghetti, D. L. Marchisio, \quotes{PUFoam: a novel open-source CFD solver for the simulation of expanding and reacting polyurethane foams}, submitted to \textit{Computer Physics Communications}, July 2016.
+\underline{M. Karimi}, D. L. Marchisio, E. Laurini, M. Fermeglia, S. Pricl, \quotes{Bridging the gap across scales: Coupling CFD and MD/GCMC in polyurethane foam simulation}, \textit{Chemical Engineering Science}, Vol. 178, pp. 39--47, 2018.
+
+	\item 
+\underline{M. Karimi}, H. Droghetti, D. L. Marchisio, \quotes{PUFoam: a novel open-source CFD solver for the simulation of expanding and reacting polyurethane foams}, \textit{Computer Physics Communications}, Vol. 217, pp. 138--148, 2017.
+
 	\item
 P. Ferkl, \underline{M. Karimi}, D. L. Marchisio, J. Kosek, \quotes{Multi-scale modelling of expanding polyurethane foams: coupling macro- and bubble-scales}, \textit{Chemical Engineering Science}, Vol. 148, pp. 55--64, 2016.
 	
@@ -304,14 +325,17 @@ P. Ferkl, \underline{M. Karimi}, D. L. Marchisio, J. Kosek, \quotes{Introducing 
 
 	\item
 \underline{M. Karimi}, G. Akdogan, K. Dellimore, S. M. Bradshaw, \quotes{Comparison of Different Drag Coefficients in CFD Modelling of a Laboratory Scale Rushton-Turbine Flotation Tank}, \textit{In: Proceedings of the Ninth International Conference on CFD in the Minerals and Process Industries}, CSIRO, Melbourne, Australia, December 10-12, 2012.
+	
 	\item
 \underline{M. Karimi}, G. Akdogan, K. Dellimore, S. M. Bradshaw, \quotes{Quantification of Numerical and Model Uncertainties in the CFD Simulation of the Gas Holdup and Flow Dynamics in a Laboratory Scale Rushton-turbine Flotation Tank}, \textit{In: Proceedings of the Ninth International Conference on CFD in the Minerals and Process Industries}, CSIRO, Melbourne, Australia, December 10-12, 2012.
+
 	\item 
 \underline{M. Karimi}, G. Akdogan, S. M. Bradshaw, A. Mainza,  \quotes{Numerical Modelling of Air Core in Hydrocyclones}, \textit{In: Proceedings of the Ninth International Conference on CFD in the Minerals and Process Industries}, CSIRO, Melbourne, Australia, December 10-12, 2012.
-	\item 
-\underline{M. Karimi}, G. Akdogan, S. M. Bradshaw, \quotes{CFD Simulation of a Mechanically Stirred Tank using Multiple Reference Frames Technique}, \textit{MINPRO 2011 South African Institute of Mining \& Metallurgy}, Western Cape Branch, Cape Town, South Africa, 2011.
-	\item 
-\underline{M. Karimi}, G. Akdogan, S. M. Bradshaw, \quotes{Comparison of Various Turbulence Models for CFD Simulation of Hydrocyclones}, \textit{MINPRO 2011 South African Institute of Mining \& Metallurgy}, Western Cape Branch, Cape Town, South Africa, 2011.
+
+%	\item 
+%\underline{M. Karimi}, G. Akdogan, S. M. Bradshaw, \quotes{CFD Simulation of a Mechanically Stirred Tank using Multiple Reference Frames Technique}, \textit{MINPRO 2011 South African Institute of Mining \& Metallurgy}, Western Cape Branch, Cape Town, South Africa, 2011.
+%	\item 
+%\underline{M. Karimi}, G. Akdogan, S. M. Bradshaw, \quotes{Comparison of Various Turbulence Models for CFD Simulation of Hydrocyclones}, \textit{MINPRO 2011 South African Institute of Mining \& Metallurgy}, Western Cape Branch, Cape Town, South Africa, 2011.
 
 \end{enumerate}
 
@@ -343,16 +367,16 @@ P. Ferkl, \underline{M. Karimi}, D. L. Marchisio, J. Kosek, \quotes{Introducing 
 \rfoot{\textcolor{gray}{Page \thepage}}
 \fancyfoot[C]{}
 
-\subsection*{AWARDS AND HONOURS}
-\hrule
-\vspace{0.2cm}
-\begin{list}{}{}
-	\item - South African Minerals to Metals Research Institute (SAMMRI), Scholarship Recipient, 2013.
-	\item - OUTOTEC Travel Grant Recipient, 2012.
-	\item - PGIO Overseas Conference Grant Recipient, 2012.
-	\item - OSP Scholarship Recipient, 2011 and 2010.
-	\item - First Grade Graduate of Yazd University, 2010.
-\end{list}
+%\subsection*{AWARDS AND HONOURS}
+%\hrule
+%\vspace{0.2cm}
+%\begin{list}{}{}
+%	\item - South African Minerals to Metals Research Institute (SAMMRI), Scholarship Recipient, 2013.
+%	\item - OUTOTEC Travel Grant Recipient, 2012.
+%	\item - PGIO Overseas Conference Grant Recipient, 2012.
+%	\item - OSP Scholarship Recipient, 2011 and 2010.
+%	\item - First Grade Graduate of Yazd University, 2010.
+%\end{list}
 
 %\vspace{0.1cm}
 
@@ -360,10 +384,10 @@ P. Ferkl, \underline{M. Karimi}, D. L. Marchisio, J. Kosek, \quotes{Introducing 
 \hrule
 \vspace{0.2cm}
 \begin{list}{}{}
-	\item \textbf{Pre-processing:} Proficient in Design Modeller and GAMBIT, familiar with SALOME.
+	\item \textbf{Pre-processing:} Proficient in Design Modeller and GAMBIT, familiar with SALOME and Blender.
 	\item \textbf{CFD codes:} Proficient in OpenFOAM and Fluent.
 	\item \textbf{Post-processing:} Proficient in CFD-Post and ParaView.	
-	\item \textbf{Programming:} Proficient in C++, experienced with Python and MATLAB.
+	\item \textbf{Programming:} Proficient in C++ and MATLAB, experienced with Python.
     \item \textbf{Design of Experiments:} Proficient in Design Expert, MiniTab, Qualitek.
     \item \textbf{Mineral processing tools:} Experienced with MODSIM, familiar with JKSimMet.
 \end{list}
@@ -397,10 +421,11 @@ P. Ferkl, \underline{M. Karimi}, D. L. Marchisio, J. Kosek, \quotes{Introducing 
 \vspace{0.2cm}
 
 \begin{list}{}{}
-\item - Guven Akdogan (gakdogan@sun.ac.za), Associate Professor, Department of Process Engineering, Stellenbosch University, Stellenbosch, South Africa.
-\item - Daniele L. Marchisio (daniele.marchisio@polito.it), Associate Professor, Department of Applied Science and Technology, Politecnico di Torino, Turin, Italy.
-\item - Steven M. Bradshaw (smb@sun.ac.za), Professor, Department of Process Engineering, Stellenbosch University, Stellenbosch, South Africa.
-\item - Ali Dehghani, (a.dehghani@yazduni.ac.ir), Associate Professor, Faculty of Mining and Metallurgical Engineering, Yazd University, Yazd, Iran.
+\item - Ronnie Andersson (\href{mailto:ronnie.andersson@chalmers.se}{ronnie.andersson@chalmers.se}), Associate Professor, Department of Chemistry and Chemical Engineering, Chalmers University of Technology, Gothenburg, Sweden.
+\item - Daniele L. Marchisio (\href{mailto:daniele.marchisio@polito.it}{daniele.marchisio@polito.it}), Professor, Department of Applied Science and Technology, Politecnico di Torino, Turin, Italy.
+\item - Guven Akdogan (\href{mailto:gakdogan@sun.ac.za}{gakdogan@sun.ac.za}), Associate Professor, Department of Process Engineering, Stellenbosch University, Stellenbosch, South Africa.
+%\item - Steven M. Bradshaw (smb@sun.ac.za), Professor, Department of Process Engineering, Stellenbosch University, Stellenbosch, South Africa.
+%\item - Ali Dehghani, (a.dehghani@yazduni.ac.ir), Associate Professor, Faculty of Mining and Metallurgical Engineering, Yazd University, Yazd, Iran.
 \end{list}
 
 \thispagestyle{fancy}
