--- a/CV.tex
+++ b/CV.tex
@@ -107,7 +107,7 @@ Chalmers University of Technology& Cell: +46 070 540 1274\\
 \hrule
 \vspace{0.2cm}
 \begin{list}{}{}
-\item Researcher in Computational Fluid Dynamics with a passion for turbulent multiphase systems and programming. Over eight years of experience developing and applying CFD models for a wide range of problems in chemical and process engineering fields.
+\item Researcher in Computational Fluid Dynamics with a passion for turbulent multiphase systems and programming. Over ten years of experience developing and applying CFD models for a wide range of problems in chemical and process engineering fields.
 \end{list}
 \vspace{0.1cm}
 
@@ -176,8 +176,8 @@ xxxx\=xxxxxxxx\=xxxxxxxx\=xxxxxxxx\=\kill
 \>\begin{tabular*}{0.97\linewidth}{l@{\extracolsep{\fill}}r}
 %\vspace{0.2cm}
 \textbf{Postdoctoral Researcher} & \textbf{2017 - Present} \\
-\textit{Department of Chemistry and Chemical Engineering}& \\
-\textit{Chalmers University of Technology}&
+Department of Chemistry and Chemical Engineering& \\
+Chalmers University of Technology&
 \end{tabular*}
 \end{tabbing}
 \vspace{-0.18cm}
@@ -191,14 +191,14 @@ xxxx\=xxxxxxxx\=xxxxxxxx\=xxxxxxxx\=\kill
 \>\begin{tabular*}{0.97\linewidth}{l@{\extracolsep{\fill}}r}
 %\vspace{0.2cm}
 \textbf{Postdoctoral Researcher} & \textbf{2014 - 2017} \\
-\textit{Department of Applied Science and Technology}& \\
-\textit{Polytechnic University of Turin}&
+Department of Applied Science and Technology& \\
+Polytechnic University of Turin&
 \end{tabular*}
 \end{tabbing}
 \vspace{-0.18cm}
 
 \begin{list}{}{}
-\item Worked with \href{http://bit.ly/2CYF9sp}{Professor Marchisio} on \quotes{Modelling of Morphology Development of Micro and Nano Structures, \href{https://github.com/karimimp/MoDeNa}{(MoDeNa)}} project. Developed a new solver, \href{http://www.sciencedirect.com/science/article/pii/S0010465517300978}{\texttt{PUFoam}}, in OpenFOAM based on coupling of PBE with CFD.
+\item Worked with \href{http://bit.ly/2CYF9sp}{Professor Marchisio} on \quotes{Modelling of Morphology Development of Micro and Nano Structures, \href{https://github.com/karimimp/MoDeNa}{(MoDeNa)}} project. Developed a new solver, \href{http://www.sciencedirect.com/science/article/pii/S0010465517300978}{\texttt{PUFoam}}, in OpenFOAM based on coupling of PBE with CFD for simulation of reacting expanding polyurethane foams.
 % \item \hspace{16pt}  - Formulating a novel approach based on population balance equation for the simulation of polyurethane foams.
 % \item \hspace{16pt}  - Developing and validating a model prototype for simulation of reacting expanding polyurethane foams, \href{https://github.com/MoDeNa-EUProject/MoDeNa}{(source code)}.
 % \item \hspace{16pt}  - Introducing a new solver, \quotes{\texttt{PUFoam}}, in OpenFOAM CFD code, based on coupling of PBE with CFD.
