fix the email add

--- a/CV.tex
+++ b/CV.tex
@@ -87,7 +87,7 @@
 \begin{tabular*}{\linewidth}{l@{\extracolsep{\fill}}r}
 
 Department of Chemistry and Chemical Engineering& Cell: +46 070 540 1274 \\ 
-Chalmers University of Technology& Email: mohsen.k@chalmers.se\\
+Chalmers University of Technology& Email: mohsenk@chalmers.se\\
 412 96, Gothenburg, Sweden &  \href{https://orcid.org/0000-0002-1182-1133}{ORCID ID}\\ 
   \\
 \end{tabular*}
